[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/battle/PartySelect.gd" id="1"]

[node name="PartySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.12, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Select Party"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RosterList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="Footer" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="CountLabel" type="Label" parent="Panel/MarginContainer/VBox/Footer"]
layout_mode = 2
text = "1 / 5 selected"
theme_override_font_sizes/font_size = 15

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBox/Footer"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
disabled = true
text = "Start Battle"
theme_override_font_sizes/font_size = 15
